Added yaz-client command querycharset which specifies character set for
query terms for Z39.50 RPN queries and Z39.50 Scan Requests
(termListAndStartPoint).

Charset ISO5428:1984 is an alias for ISO5428-1984.

Implemented a way to perform scan in a result set using Z39.50. This
is achieved by attaching the result set name in the characterInfo
(type InternationalString) of OtherInformation in the Scan Request PDU.
The result set is identified in the otherinformation by the new OID:
 USERINFO, Z3950_PREFIX.10.1000.81.4, "Scan-Set
This allows for scan in result set and faceted search . Zebra did some
of this in the APT term using attribute type 8 and value being result
set. Using the OtherInformation approach for this is cleaner and easier
to work with in proxies and the like. This facility can be used in
yaz-client using new command setscan which takes a result set as first
argument, start position (APT) as second.

Changed decoding of SRU XML packed records to deal with servers that
have recordData with XML data with multiple root nodes. Also make
comparison for recordPacking case insensitive. Again, one server
returns "XML" where others return "xml".

For SRU responses allow Content-Type application/xml as well as text/xml.

--- 3.0.4 2007/05/21

Fixed bug in character set conversion of BER strings. Bug introduced
in 3.0.0.

--- 3.0.2 2007/05/08

For OIDs use Odr_oid type everywhere, i.e. do not assume Odr_oid=int.

For OID class, use oid_class consistently.

Fixed external handling for SUTRS and Explain records (bug appeared in 3.0
series).

Added partial support for ISO5428-1984, which is the "Greek alphabet coded
character set for bibliographic information interchange". By Giannis Kosmas.

Added documentation on new OID API.

--- 3.0.0 2007/05/02

Changes to generic frontend server interface: added new member
'query_charset' for bend_initrequest structure. A backend init handler
should set this member to its native character set for query terms.